<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menuNews"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/menuMore"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />

</menu>